# fintual-portfolio-showcase

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  GITHUB_PUSH_INSTRUCTIONS.md  Makefile  README.md  RESEARCH_PLAN.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: goals.py  rebalance.py
app/api/v1/schemas/: goal.py  rebalance.py
app/core/: constraints.py  metrics.py  models.py  rebalancer.py
app/services/: goal_service.py
docs/benchmarks/: simple_vs_cvar_results.md
docs/llm_conversations/gemini/: 00_GEMINI_TASK_BRIEF.md  01_CODE_EXAMPLES.md  02_implementation_summary.md  PROMPT_FOR_GEMINI.md
docs/notebook_lm_research/: 01_product_philosophy.md  02_technical_architecture.md  03_investment_features.md  04_ux_communication.md  05_competitive_differentiation.md  06_showcase_alignment.md
frontend/: IMPROVEMENTS.md  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: CreateGoalForm.css  CreateGoalForm.jsx  GoalCard.css  GoalCard.jsx  RebalanceView.css  RebalanceView.jsx
frontend/src/services/: api.js
frontend/src/styles/: App.css  index.css
scripts/: benchmark_strategies.py  test_api.sh
tests/: conftest.py
tests/unit/: test_metrics.py  test_models.py  test_rebalancer.py
